fix thirds alignment

--- a/css/compiled.css
+++ b/css/compiled.css
@@ -19,14 +19,22 @@ h1 {
 
 h2 {
   font-family: futura;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  display: inline-block;
+  text-align: center;
+  color: inherit; }
 
 a {
   text-decoration: none; }
   a:hover {
-    border-bottom: 2px solid; }
+    border-bottom: 3px solid; }
 
-.sub {
+p {
+  font-family: helvetica, arial, sans-serif;
+  text-align: center; }
+
+.sub-container {
+  float: left;
   width: 100%;
   max-width: 1000px;
   border-color: inherit;
@@ -34,25 +42,31 @@ a {
   border-bottom: 5px solid;
   padding: 0px;
   margin-bottom: 30px;
-  font: inherit; }
+  font: inherit;
+  text-align: center; }
 
 .left {
   float: left;
-  margin: 1%;
-  padding: 2.3%;
-  width: 30%;
-  max-width: 300px; }
+  margin: 0.5%;
+  padding: none;
+  border: none;
+  width: 32%;
+  max-width: 330px; }
 
 .center {
-  float: center;
-  margin: 1%;
-  padding: 2.3%;
-  width: 30%;
-  max-width: 300px; }
+  margin: 0.5%;
+  padding: none;
+  border: none;
+  width: 32%;
+  max-width: 330px; }
 
 .right {
   float: right;
-  margin: 1%; }
+  margin: 0.5%;
+  padding: none;
+  border: none;
+  width: 32%;
+  max-width: 330px; }
 
 .grey {
   border-color: #bdbdbd; }
@@ -65,7 +79,8 @@ a {
     color: #ff8900; }
 
 .blue {
-  border-color: #086fa1; }
+  border-color: #086fa1;
+  color: #086fa1; }
   .blue a {
     color: #086fa1; }
 
@@ -88,7 +103,13 @@ a {
   position: fixed;
   background: white;
   bottom: 0px;
-  font-size: 200%; }
+  font-size: 200%;
+  margin: 0.5%;
+  padding: none;
+  border: none; }
+  .navbar table {
+    cellspacing: 0;
+    cellpadding: 0; }
   .navbar td {
     width: 25%;
     text-align: center; }
@@ -96,4 +117,9 @@ a {
 table {
   width: 100%;
   max-width: 1000px;
-  text-align: center; }
+  text-align: center;
+  border: 0px;
+  margin: 0px;
+  padding: 0px;
+  cellspacing: 0px;
+  cellpadding: 0px; }
